Fixing break on venues contnet

--- a/css/base.css
+++ b/css/base.css
@@ -384,7 +384,8 @@ body #cdawrap {
 }
 
 .text-container-section-3 .text-block {
-  max-width: 350px;
+  width: 100%;
+  max-width: 460px;
   margin: 0 auto;
 }
 
